--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Reticuli Technologies</title>
+  <title>Reticuli Technologies LLC</title>
 </head>
 <body>
   <h1>Hello.</h1>
